updated the location for Rahul sir session and modified the marque tag content

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <body>
     <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
     <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;">
-      ‼️ Registrations will be closed by 6:30pm on 25th october for Pccoe Acm Hacktoberfest 2023 &nbsp; |
-      Tentative Dates 23 Oct to 28 Oct 2023 | ✨ Participate and win exciting goodies along with participation
+     26th October 10am to 12pm Session By Rahul Kulkarni Sir on GSOC and Open Souce Contribution , Location PCCOE SB PATIL , MBA Seminar Hall &nbsp; |
+       ✨ Participate and win exciting goodies along with participation
       certificate!! &nbsp; | Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
     </marquee>
 
@@ -224,17 +224,21 @@
           <div class="timeline__event__icon">
             <i class="lni-burger"></i>
           </div>
-          <div class="timeline__event__date ">
+          <div class="timeline__event__date  ">
             <img src="images/rahulsir.jpeg" width="250" alt="">
 
           </div>
 
-          <div class="timeline__event__content">
+          <div class="timeline__event__content w-50">
             <div class="timeline__event__title mt-4 text-center mb-2" style="color: #065f9f ">
               Introduction to <b>GSOC</b>  & Opensource
             </div>
             <div class="timeline__event__title text-center mb-2" style="color: #065f9f">
               10:00 AM to 12:00 PM
+
+            </div>
+            <div class="timeline__event__title text-lg-sm text-center mb-2" style="color: #065f9f">
+              Location : PCCOE SB PATIL , MBA Seminar Hall
 
             </div>
             <div class="timeline__event__description">
@@ -267,7 +271,11 @@
           <div class="timeline__event__icon">
             <i class="lni-cake"></i>
           </div>
-          <div class="timeline__event__date">2:00 PM to 2:30 PM</div>
+          <div class="timeline__event__date d-flex flex-column">2:00 PM to 2:30 PM
+
+            <h4 class="text-center text-white">Location : 6221 and 6222</h4>
+
+          </div>
           <div class="timeline__event__content">
             <div class="timeline__event__title time-title text-center mb-2" style="color: #065f9f">
               Inaugration of Event by ACM-PCCOE
