--- a/project.html
+++ b/project.html
@@ -46,8 +46,8 @@
   <title> Projects | PCCOE | ACM - HacktoberFest-2023</title>
 </head>
 
-<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
-
+<body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"
+>
   
   <section class="flash">
     <div id="poster" class="full-screen-poster">
@@ -175,10 +175,15 @@
 
           <div class="unkonown">
             <h2 class="text-center" style="color:#ecf32a">
-              <div class="typewriter">
-                <h2>See you tommorow at the event...</h2>
+              
+              <div class="info d-flex flex-column ">
+                <h3>26th October 2023</h3>
+                <h4>WORKSHOP ON VERSION CONTROL FOR OPENSOURCE CONTRIBUTION</h4>
+                <h4>2:30 PM to 5:00 PM</h4>
+                <h4>Location : 6221 and 6222</h4>
               </div>
 
+             
             </h2>
           </div>
 
@@ -337,7 +342,7 @@
       // Set a timeout to hide the poster after 10 seconds
       setTimeout(function () {
         poster.style.display = "none";
-      }, 3000); // 5,000 milliseconds = 5 seconds
+      }, 2000); // 5,000 milliseconds = 5 seconds
     });
 
   </script>
