--- a/hackprojects.html
+++ b/hackprojects.html
@@ -688,16 +688,16 @@
             <div class="ind_stats">
               <div class="forks cont">
                 <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
-                <h3 class="text-white" id="animated_forks">00</h3>
+                <h3 class="text-white" id="flash_forks">00</h3>
               </div>
               <div class="pull cont">
                 <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
-                <h3 class="text-white" id="animated_prs">00</h3>
+                <h3 class="text-white" id="flash_prs">00</h3>
               </div>
               <div class="merged cont">
                 <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
 
-                <h3 class="text-white" id="animated_mprs">00</h3>
+                <h3 class="text-white" id="flash_mprs">00</h3>
               </div>
             </div>
 
@@ -754,16 +754,16 @@
             <div class="ind_stats">
               <div class="forks cont">
                 <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
-                <h3 class="text-white" id="animated_forks">00</h3>
+                <h3 class="text-white" id="flavor_forks">00</h3>
               </div>
               <div class="pull cont">
                 <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
-                <h3 class="text-white" id="animated_prs">00</h3>
+                <h3 class="text-white" id="flavor_prs">00</h3>
               </div>
               <div class="merged cont">
                 <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
 
-                <h3 class="text-white" id="animated_mprs">00</h3>
+                <h3 class="text-white" id="flavor_mprs">00</h3>
               </div>
             </div>
 
@@ -820,16 +820,16 @@
             <div class="ind_stats">
               <div class="forks cont">
                 <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
-                <h3 class="text-white" id="animated_forks">00</h3>
+                <h3 class="text-white" id="restaurant_forks">00</h3>
               </div>
               <div class="pull cont">
                 <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
-                <h3 class="text-white" id="animated_prs">00</h3>
+                <h3 class="text-white" id="restaurant_prs">00</h3>
               </div>
               <div class="merged cont">
                 <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
 
-                <h3 class="text-white" id="animated_mprs">00</h3>
+                <h3 class="text-white" id="restaurant_mprs">00</h3>
               </div>
             </div>
 
@@ -839,6 +839,369 @@
       </div>
     </div>
 
+    <div class="hackcards">
+      <div class="grid1">
+        <div class="hackcard">
+          <span class="icon">
+            <!--      adding the icon here -->
+          </span>
+          <h3 class="text-white">GDSC_TextUtils</h3>
+          <p>
+            This repository is for contributions to the GDSC_TextUtils.
+            This project is open to all members of the GitHub community.
+          </p>
+          <div class="shine"></div>
+          <div class="background">
+            <div class="tiles">
+              <div class="tile tile-1"></div>
+              <div class="tile tile-2"></div>
+              <div class="tile tile-3"></div>
+              <div class="tile tile-4"></div>
+
+              <div class="tile tile-5"></div>
+              <div class="tile tile-6"></div>
+              <div class="tile tile-7"></div>
+              <div class="tile tile-8"></div>
+
+              <div class="tile tile-9"></div>
+              <div class="tile tile-10"></div>
+            </div>
+
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+
+          </div>
+
+          <div class="githubbtns">
+            <a href="#">
+              <button class="githubbtn">html</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">css</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">JavaScript</button>
+            </a>
+
+          </div>
+          <a href="https://github.com/pccoe-acm-hacktoberfest-2023/GDSC_TextUtils" target="_blank">
+            <button class="githubbtn p-2 ">VIEW</button>
+          </a>
+          <div class="ind_stats">
+            <div class="forks cont">
+              <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="textutils_forks">00</h3>
+            </div>
+            <div class="pull cont">
+              <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="textutils_prs">00</h3>
+            </div>
+            <div class="merged cont">
+              <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
+
+              <h3 class="text-white" id="textutils_mprs">00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <label class="day-night">
+        <input type="checkbox" checked />
+        <div></div>
+      </label>
+    </div>
+    <!-- hac -->
+    <div class="hackcards">
+      <div class="grid1">
+        <div class="hackcard">
+          <span class="icon">
+            <!--      adding the icon here -->
+          </span>
+          <h3 class="text-white">GDSC_calculator
+            </h3>
+          <p>
+            This repository is for contributions to the GDSC_calculator.
+            This project is open to all members of the GitHub community.
+          </p>
+          <div class="shine"></div>
+          <div class="background">
+            <div class="tiles">
+              <div class="tile tile-1"></div>
+              <div class="tile tile-2"></div>
+              <div class="tile tile-3"></div>
+              <div class="tile tile-4"></div>
+
+              <div class="tile tile-5"></div>
+              <div class="tile tile-6"></div>
+              <div class="tile tile-7"></div>
+              <div class="tile tile-8"></div>
+
+              <div class="tile tile-9"></div>
+              <div class="tile tile-10"></div>
+            </div>
+
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+
+          </div>
+
+          <div class="githubbtns">
+            <a href="#">
+              <button class="githubbtn">html</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">css</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">JavaScript</button>
+            </a>
+
+          </div>
+          <a href="https://github.com/pccoe-acm-hacktoberfest-2023/GDSC_calculator" target="_blank">
+            <button class="githubbtn p-2 ">VIEW</button>
+          </a>
+          <div class="ind_stats">
+            <div class="forks cont">
+              <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="calculator_forks">00</h3>
+            </div>
+            <div class="pull cont">
+              <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="calculator_prs">00</h3>
+            </div>
+            <div class="merged cont">
+              <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
+
+              <h3 class="text-white" id="calculator_mprs">00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <label class="day-night">
+        <input type="checkbox" checked />
+        <div></div>
+      </label>
+    </div>
+    <!-- hac -->
+    <div class="hackcards">
+      <div class="grid1">
+        <div class="hackcard">
+          <span class="icon">
+            <!--      adding the icon here -->
+          </span>
+          <h3 class="text-white">GDSC_Insta_Bot
+          </h3>
+          <p>
+            This repository is for contributions to the GDSC_Insta_Bot.
+            This project is open to all members of the GitHub community.
+          </p>
+          <div class="shine"></div>
+          <div class="background">
+            <div class="tiles">
+              <div class="tile tile-1"></div>
+              <div class="tile tile-2"></div>
+              <div class="tile tile-3"></div>
+              <div class="tile tile-4"></div>
+
+              <div class="tile tile-5"></div>
+              <div class="tile tile-6"></div>
+              <div class="tile tile-7"></div>
+              <div class="tile tile-8"></div>
+
+              <div class="tile tile-9"></div>
+              <div class="tile tile-10"></div>
+            </div>
+
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+
+          </div>
+
+          <div class="githubbtns">
+            <a href="#">
+              <button class="githubbtn">html</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">css</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">Python</button>
+            </a>
+
+          </div>
+          <a href="https://github.com/pccoe-acm-hacktoberfest-2023/GDSC_Insta_Bot" target="_blank">
+            <button class="githubbtn p-2 ">VIEW</button>
+          </a>
+          <div class="ind_stats">
+            <div class="forks cont">
+              <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="insta_forks">00</h3>
+            </div>
+            <div class="pull cont">
+              <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="insta_prs">00</h3>
+            </div>
+            <div class="merged cont">
+              <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
+
+              <h3 class="text-white" id="insta_mprs">00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <label class="day-night">
+        <input type="checkbox" checked />
+        <div></div>
+      </label>
+    </div>
+    
+
+    <!-- hac -->
+    <div class="hackcards">
+      <div class="grid1">
+        <div class="hackcard">
+          <span class="icon">
+            <!--      adding the icon here -->
+          </span>
+          <h3 class="text-white">GDSC_tic_tac_toe
+          </h3>
+          <p>
+            This repository is for contributions to the GDSC_tic_tac_toe.
+            This project is open to all members of the GitHub community.
+          </p>
+          <div class="shine"></div>
+          <div class="background">
+            <div class="tiles">
+              <div class="tile tile-1"></div>
+              <div class="tile tile-2"></div>
+              <div class="tile tile-3"></div>
+              <div class="tile tile-4"></div>
+
+              <div class="tile tile-5"></div>
+              <div class="tile tile-6"></div>
+              <div class="tile tile-7"></div>
+              <div class="tile tile-8"></div>
+
+              <div class="tile tile-9"></div>
+              <div class="tile tile-10"></div>
+            </div>
+
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+
+          </div>
+
+          <div class="githubbtns">
+            <a href="#">
+              <button class="githubbtn">html</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">css</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">JavaScript</button>
+            </a>
+
+          </div>
+          <a href="https://github.com/pccoe-acm-hacktoberfest-2023/GDSC_tic_tac_toe" target="_blank">
+            <button class="githubbtn p-2 ">VIEW</button>
+          </a>
+          <div class="ind_stats">
+            <div class="forks cont">
+              <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="tic_forks">00</h3>
+            </div>
+            <div class="pull cont">
+              <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="tic_prs">00</h3>
+            </div>
+            <div class="merged cont">
+              <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
+
+              <h3 class="text-white" id="tic_mprs">00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <label class="day-night">
+        <input type="checkbox" checked />
+        <div></div>
+      </label>
+    </div>
+    <!-- hack -->
+    <div class="hackcards">
+      <div class="grid1">
+        <div class="hackcard">
+          <span class="icon">
+            <!--      adding the icon here -->
+          </span>
+          <h3 class="text-white">GDSC_ecommerce website
+          </h3>
+          <p>
+            This repository is for contributions to the GDSC_ecommerce_istop_dummywebsite.
+            This project is open to all members of the GitHub community.
+          </p>
+          <div class="shine"></div>
+          <div class="background">
+            <div class="tiles">
+              <div class="tile tile-1"></div>
+              <div class="tile tile-2"></div>
+              <div class="tile tile-3"></div>
+              <div class="tile tile-4"></div>
+
+              <div class="tile tile-5"></div>
+              <div class="tile tile-6"></div>
+              <div class="tile tile-7"></div>
+              <div class="tile tile-8"></div>
+
+              <div class="tile tile-9"></div>
+              <div class="tile tile-10"></div>
+            </div>
+
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+
+          </div>
+
+          <div class="githubbtns">
+            <a href="#">
+              <button class="githubbtn">html</button>
+            </a>
+            <a href="#">
+              <button class="githubbtn">css</button>
+            </a>
+           
+
+          </div>
+          <a href="https://github.com/pccoe-acm-hacktoberfest-2023/GDSC_ecommerce_istop_dummywebsite" target="_blank">
+            <button class="githubbtn p-2 ">VIEW</button>
+          </a>
+          <div class="ind_stats">
+            <div class="forks cont">
+              <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="ecommerce_forks">00</h3>
+            </div>
+            <div class="pull cont">
+              <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
+              <h3 class="text-white" id="ecommerce_prs">00</h3>
+            </div>
+            <div class="merged cont">
+              <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
+
+              <h3 class="text-white" id="ecommerce_mprs">00</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <label class="day-night">
+        <input type="checkbox" checked />
+        <div></div>
+      </label>
+    </div>
   </div>
 
   </div>
