--- a/hackprojects.html
+++ b/hackprojects.html
@@ -1255,16 +1255,16 @@
           <div class="ind_stats">
             <div class="forks cont">
               <i class="fa-solid fa-code-fork fa-lg" style="color: #f0f2f5;"></i>
-              <h3 class="text-white" id="sort_forks">00</h3>
+              <h3 class="text-white" id="sorty_forks">00</h3>
             </div>
             <div class="pull cont">
               <i class="fa-solid fa-code-pull-request fa-lg" style="color: #f0f2f5;"></i>
-              <h3 class="text-white" id="sort_prs">00</h3>
+              <h3 class="text-white" id="sorty_prs">00</h3>
             </div>
             <div class="merged cont">
               <i class="fa-solid fa-code-merge fa-lg" style="color: #f0f2f5;"></i>
 
-              <h3 class="text-white" id="sort_mprs">00</h3>
+              <h3 class="text-white" id="sorty_mprs">00</h3>
             </div>
           </div>
         </div>
