flip projects.html to hackprojects.html

--- a/hackprojects.html
+++ b/hackprojects.html
@@ -147,7 +147,7 @@
         </div>
       </nav>
       <h1 class="text-center text-decoration-none text-capitalize">
-        <a class="text-white register-btn" href="project.html">Projects Available for Contribution
+        <a class="text-white register-btn" href="hackprojects.html">Projects Available for Contribution
         </a>
       </h1>
       <!-- Title -->
