--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <a class="nav-link register-btn" data-aos="fade-down" href="#fest-info">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link register-btn" data-aos="fade-down" href="project.html">Projects</a>
+                <a class="nav-link register-btn" data-aos="fade-down" href="hackprojects.html">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link register-btn" data-aos="fade-down" href="#timeline">Schedule</a>
