changed path for view prpjects and modified marque tag text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <body>
     <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
     <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;">
-     26th October 10am to 12pm Session By Rahul Kulkarni Sir on GSOC and Open Souce Contribution , Location PCCOE SB PATIL , MBA Seminar Hall &nbsp; |
+     Projects are out of Contribution do check it out ! &nbsp; |
        ✨ Participate and win exciting goodies along with participation
       certificate!! &nbsp; | Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
     </marquee>
@@ -162,6 +162,7 @@
                 </button>
               </a>
               <h3 class="text-danger text-center" >Registrations for Pccoe Acm Hacktoberfest are closed now !</h3>
+              <h3 class="text-primary text-center" >You can  Contribute in the Listed Projects Now </h3>
             </div>
 
           </div>
@@ -433,7 +434,7 @@
       </h2>
       <h4>
         <center>
-          <a href="project.html">
+          <a href="hackprojects.html">
             <button type="button"
               class="btn mb-4 register-btn btn-lg download-button btndesign  animate__animated animate__backInLeft ">
               View Projects
