modified marque tag

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <body>
     <!-- oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;" -->
     <marquee class="text-white font-weight-bolder mb-3 " direction="left" style="font-size: large;">
-     Projects are out of Contribution do check it out ! &nbsp; |
+     Projects are out for Contribution do check it out ! &nbsp; |
        ✨ Participate and win exciting goodies along with participation
       certificate!! &nbsp; | Making you all ready for Upcoming GSOC - 2024 🚀 &nbsp; |
     </marquee>
